--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     if: >
       github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'push' && contains(github.event.head_commit.message, 'Update-PKG_MIRROR_HASH')) ||
+      (github.event_name == 'push' && contains(github.event.head_commit.message, 'chore: update netbird')) ||
       (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.name == 'Check And Calculate PKG_HASH')
     strategy:
       fail-fast: false
