--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,13 +1,14 @@
-permissions:
-  contents: write
 name: Build OpenWrt Package
 
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["Check And Calculate PKG_HASH"]
+    workflows: ["Check And Calculate PKG_HASH"] # 匹配刚才修改的上游工作流名称
     types:
       - completed
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -15,8 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     if: >
       github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'push' && contains(github.event.head_commit.message, 'chore: update netbird')) ||
-      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.name == 'Check And Calculate PKG_HASH')
+      (github.event_name == 'push' && contains(github.event.head_commit.message, 'update netbird')) ||
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
     strategy:
       fail-fast: false
       matrix:
@@ -31,38 +32,6 @@ jobs:
     steps:
       - name: 🧾 Checkout repo
         uses: actions/checkout@v6
-
-      - name: 🔎 Decide whether build is needed (fingerprint compare)
-        id: need
-        env:
-          COMMIT_MSG: ${{ github.event.workflow_run.head_commit.message }}
-        run: |
-          echo "Trigger commit message: $COMMIT_MSG"
-          FP=$(echo "$COMMIT_MSG" | sed -n 's/.*FP=\([0-9a-f]\{64\}\).*/\1/p')
-          if [ -z "$FP" ]; then
-            echo "No FP found in commit message; default to build."
-            echo "need=true" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-          if [ -f .last-fingerprint ]; then
-            LAST=$(cat .last-fingerprint)
-          else
-            LAST=""
-          fi
-          echo "Current FP: $FP"
-          echo "Last FP: $LAST"
-          if [ "$FP" = "$LAST" ]; then
-            echo "Fingerprint unchanged; skip build."
-            echo "need=false" >> $GITHUB_OUTPUT
-          else
-            echo "Fingerprint changed; proceed to build."
-            echo "need=true" >> $GITHUB_OUTPUT
-
-      - name: ⛔ Exit early if no build needed
-        if: steps.need.outputs.need == 'false'
-        run: |
-          echo "No build needed. Exiting."
-          exit 0
 
       - name: 📛 Extract PKG_NAME from Makefile
         run: |
@@ -108,8 +77,6 @@ jobs:
           if [ -d "bin/packages" ]; then
             echo "=== packages directory structure ==="
             find bin/packages/ -type f -name "*.ipk" 2>/dev/null || echo "No .ipk files in packages directory"
-            echo "=== Full packages directory tree ==="
-            ls -laR bin/packages/ 2>/dev/null || echo "No packages directory"
           fi
 
       - name: 📦 Upload artifact for ${{ matrix.target }}
@@ -124,7 +91,6 @@ jobs:
     name: Release ${{ github.repository }}
     needs: build
     runs-on: ubuntu-latest
-
     steps:
       - name: 🧾 Checkout repo
         uses: actions/checkout@v6
@@ -132,13 +98,10 @@ jobs:
       - name: 🔍 Extract version and release from Makefile
         id: version
         run: |
+          # 仅保留针对标准 PKG_VERSION 的提取逻辑
           PKG_VERSION=$(grep -E '^PKG_VERSION *:?=' Makefile | head -n1 | cut -d= -f2 | tr -d '[:space:]')
-          if [ -z "$PKG_VERSION" ]; then
-            PKG_SOURCE_DATE=$(grep -E '^PKG_SOURCE_DATE *:?=' Makefile | head -n1 | cut -d= -f2 | tr -d '[:space:]')
-            PKG_SOURCE_VERSION=$(grep -E '^PKG_SOURCE_VERSION *:?=' Makefile | head -n1 | cut -d= -f2 | tr -d '[:space:]')
-            PKG_VERSION="${PKG_SOURCE_DATE//-/.}.$(echo $PKG_SOURCE_VERSION | cut -c1-8)"
-          fi
           PKG_RELEASE=$(grep -E '^PKG_RELEASE *:?=' Makefile | head -n1 | cut -d= -f2 | tr -d '[:space:]')
+          
           COMBINED_VERSION="${PKG_VERSION}-${PKG_RELEASE}"
           echo "📦 Version: $COMBINED_VERSION"
           echo "version=$PKG_VERSION" >> "$GITHUB_OUTPUT"
@@ -176,7 +139,6 @@ jobs:
             ./release-assets/**/netbird*.ipk
           draft: false
           prerelease: false
-          overwrite_files: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -191,15 +153,18 @@ jobs:
       - name: 📂 Copy artifacts into repo
         if: steps.check_release.outputs.exists == 'false'
         run: |
+          # 提取对应架构目录并清理旧包
           find ./release-assets -type f -name "netbird*.ipk" | while read -r f; do
             base=$(basename "$f")
             pkgname=$(echo "$base" | sed -E 's/^([^_]+)_.*$/\1/')
             archdir=$(echo "$f" | sed -E 's#.*/netbird-([^/]+)-openwrt.*#\1#')
             echo "Processing $pkgname for arch $archdir"
-            mkdir -p custom-packages/$archdir
+            
+            mkdir -p "custom-packages/$archdir"
             echo "Cleaning old versions of $pkgname in $archdir"
-            rm -f custom-packages/$archdir/${pkgname}_*.ipk
-            cp "$f" custom-packages/$archdir/
+            rm -f "custom-packages/$archdir/${pkgname}_*.ipk"
+            
+            cp "$f" "custom-packages/$archdir/"
           done
           ls -laR custom-packages
 
@@ -210,5 +175,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "Update to - v${{ steps.version.outputs.full_version }}" || echo "No changes"
+          git commit -m "Update netbird to v${{ steps.version.outputs.full_version }}" || echo "No changes"
           git push
