--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -24,10 +24,13 @@ jobs:
         include:
           - version: openwrt-24.10
             target: x86_64
+            sdk_url: "https://downloads.openwrt.org/releases/24.10.5/targets/x86/64/openwrt-sdk-24.10.0-x86-64_gcc-13.3.0_musl.Linux-x86_64.tar.zst"
           - version: openwrt-24.10
             target: aarch64_cortex-a53
+            sdk_url: https://downloads.openwrt.org/releases/24.10.5/targets/qualcommax/ipq807x/openwrt-sdk-24.10.5-qualcommax-ipq807x_gcc-13.3.0_musl.Linux-x86_64.tar.zst
           - version: openwrt-24.10
             target: arm_cortex-a7_neon-vfpv4
+            sdk_url: https://downloads.openwrt.org/releases/24.10.5/targets/ipq40xx/generic/openwrt-sdk-24.10.5-ipq40xx-generic_gcc-13.3.0_musl_eabi.Linux-x86_64.tar.zst
 
     steps:
       - name: 🧾 Checkout repo
@@ -65,40 +68,66 @@ jobs:
           echo "No build needed. Exiting."
           exit 0
           
-      - name: 📛 Extract PKG_NAME from Makefile
+      - name: 🛠️ Install dependencies
         run: |
-          PKG_NAME=$(grep -E '^PKG_NAME[:?]?=' Makefile | head -n1 | sed -E 's/PKG_NAME[:?]?= *//')
-          echo "PKG_NAME=$PKG_NAME" >> "$GITHUB_ENV"
+          sudo apt-get update
+          sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
+            gettext git libncurses-dev libssl-dev python3-distutils rsync unzip zlib1g-dev file wget zstd
 
-      - name: 🏗️ Build with OpenWrt SDK
-        uses: openwrt/gh-action-sdk@v10
-        env:
-          ARCH: ${{ matrix.target }}-${{ matrix.version }}
-          PACKAGES: ${{ env.PKG_NAME }}
-          NO_SHFMT_CHECK: 1
-          NO_REFRESH_CHECK: 1
-          COMMAND: |
-            set -x
-            # 1. 强制更新并安装所有 feed，确保基础环境（golang等）存在
-            ./scripts/feeds update -a
-            ./scripts/feeds install -a
-            
-            # 2. 彻底删除官方源里的 netbird 文件夹
-            # 官方路径通常在 feeds/packages/net/netbird
-            find feeds/ -name "netbird" -type d -exec rm -rf {} +
-            
-            # 3. 在 package 目录下创建一个新的 netbird 目录
-            mkdir -p package/${{ env.PKG_NAME }}
-            
-            # 4. 把我们当前的 Makefile 及其相关文件拷进去
-            # 因为我们在 SDK 容器内，当前目录就是仓库根目录
-            cp -r Makefile files/ ./package/${{ env.PKG_NAME }}/
-            
-            # 5. 再次修正索引，确保 SDK 识别到我们的新版本
-            make package/${{ env.PKG_NAME }}/dump
-            
-            # 6. 执行编译
-            make package/${{ env.PKG_NAME }}/compile V=s
+      - name: 🏗️ Initialization environment
+        run: |
+          # 1. 下载并解压 SDK (这里以 x86_64 为例，建议在 matrix 中定义 sdk_url)
+          wget -qO sdk.tar.zst "${{ matrix.sdk_url }}"
+          mkdir sdk
+          tar --zstd -xf sdk.tar.zst -C ./sdk --strip-components=1
+          cd sdk
+
+          # 2. 切换 GitHub 源并更新 feeds
+          sed -i 's|git.openwrt.org/feed|github.com/openwrt|g' feeds.conf.default
+          sed -i 's|git.openwrt.org/project|github.com/openwrt|g' feeds.conf.default
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a
+
+          # 3. 🧪 Apply Patch: 强制升级 Golang 版本到最新
+          # 这一步参考你提供的代码，确保 netbird 编译时使用的 go 环境足够新
+          rm -rf temp_resp
+          git clone -b master --single-branch https://github.com/openwrt/packages.git temp_resp
+          echo "Updating Golang to latest from packages.git"
+          rm -rf feeds/packages/lang/golang
+          cp -r temp_resp/lang/golang feeds/packages/lang/
+          rm -rf temp_resp
+          
+          # 再次刷新以应用 patch
+          ./scripts/feeds update -i
+          ./scripts/feeds install -a
+
+          # 4. 🔀 强行覆盖官方 netbird 源码
+          # 先清理官方路径
+          echo "Removing official netbird source..."
+          rm -rf feeds/packages/net/netbird/*
+          
+          # 确保目标目录存在（针对某些 SDK 结构）
+          mkdir -p feeds/packages/net/netbird
+          
+          # 将当前仓库代码（父目录）覆盖进去
+          echo "Copying custom netbird source to official feed path..."
+          cp -r ../Makefile ../files ./feeds/packages/net/netbird/ 2>/dev/null || cp ../Makefile ./feeds/packages/net/netbird/
+
+          # 5. 刷新索引确认
+          ./scripts/feeds install -f netbird
+
+      - name: 🧮 Compile netbird
+        run: |
+          cd sdk
+          # 生成 .config 并强制选择 netbird
+          echo "CONFIG_PACKAGE_netbird=m" > .config
+          
+          # 处理依赖关系
+          make defconfig
+          
+          # 开始编译
+          echo "Starting compilation..."
+          make package/netbird/compile V=s -j$(nproc)
 
       - name: 🔍 Debug build output
         run: |
@@ -114,9 +143,9 @@ jobs:
       - name: 📦 Upload artifact for ${{ matrix.target }}
         uses: actions/upload-artifact@v6
         with:
-          name: ${{ env.PKG_NAME }}-${{ matrix.target }}-${{ matrix.version }}
+          name: netbird-${{ matrix.target }}-${{ matrix.version }}
           path: |
-            bin/packages/*/onenas/netbird*.ipk
+            sdk/bin/packages/*/packages/netbird*.ipk
           if-no-files-found: ignore
 
   release:
